welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:6: error: illegal start of simple expression
	 	    else {Math.max(a,b)}}}
                    ^